[package]
name = "rofi-hex"
version = "0.1.0"
authors = ["Fabrizio Sestito <fabrizio.sestito@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustofi = "0.2.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.5.5"
